--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -38,6 +38,11 @@
 	<script src="../src/ui/layaUI.max.all.js"></script>
 	<!--jsfile--startTag-->
 	<script src="../src/toolset/JSExtern.js"></script>
+	<script src="../src/poker/handbase/HandCell.js"></script>
+	<script src="../src/poker/handbase/HandPanel.js"></script>
+	<script src="../src/poker/Poker.js"></script>
+	<script src="../src/poker/Pokers.js"></script>
+	<script src="../src/poker/SPoker.js"></script>
 	<script src="../src/config/AnimationsConfig.js"></script>
 	<script src="../src/config/FontsConfig.js"></script>
 	<script src="../src/config/ImagesConfig.js"></script>
