--- a/client/bin/index.html
+++ b/client/bin/index.html
@@ -37,6 +37,7 @@
 	
 	<script src="../src/ui/layaUI.max.all.js"></script>
 	<!--jsfile--startTag-->
+	<script src="../src/netserver/NetServer.js"></script>
 	<script src="../src/toolset/JSExtern.js"></script>
 	<script src="../src/poker/handbase/HandCell.js"></script>
 	<script src="../src/poker/handbase/HandPanel.js"></script>
